@@ -1,3 +1,8 @@
+2022-03-22 Riccardo Mottola <rm@gnu.org>
+
+	* Source/NSImageCell.m: subclass initImageCell, so that
+	RefusesFirstResponder can be set, matching Mac.
+
 2022-02-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/NSPopUpButtonCell.m(setMenu:): Select the first item of
